[package]
name = "mov2mp4"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"] # Consider replacing with actual author info
description = "A simple MOV to MP4 converter with a web interface"

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-multipart = "0.6.0"
futures = "0.3.28"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["v4"] }
env_logger = "0.10.0"
log = "0.4.17"
mime = "0.3.17" # This dependency isn't explicitly used in main.rs but often comes with web projects
futures-util = "0.3.28"
# tempfile = "3.5.0" # This dependency was listed but not used in the provided main.rs. Keeping if planned.
tera = "1.19.0"